src/OpenCvSharpExtern/xfeatures2d_BOW.h

#pragma once

#ifndef NO_CONTRIB

// ReSharper disable CppInconsistentNaming
// ReSharper disable CppNonInlineFunctionDefinitionInHeaderFile

#include "include_opencv.h"

// OpenCV 5 moved the bag-of-words classes (BOWTrainer / BOWKMeansTrainer /
// BOWImgDescriptorExtractor) out of the core features module and into the
// opencv_contrib xfeatures2d module (cv::xfeatures2d namespace). They are
// therefore unavailable in NO_CONTRIB (slim) builds.
#ifndef NO_CONTRIB

// BOWTrainer

CVAPI(ExceptionStatus) xfeatures2d_BOWTrainer_add(cv::xfeatures2d::BOWTrainer *obj, cv::Mat *descriptors)
{
    BEGIN_WRAP
    obj->add(*descriptors);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWTrainer_getDescriptors(cv::xfeatures2d::BOWTrainer *obj, std::vector<cv::Mat> *descriptors)
{
    BEGIN_WRAP
    const std::vector<cv::Mat> d = obj->getDescriptors();
    std::copy(d.begin(), d.end(), std::back_inserter(*descriptors));
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWTrainer_descriptorsCount(cv::xfeatures2d::BOWTrainer *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->descriptorsCount();
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWTrainer_clear(cv::xfeatures2d::BOWTrainer *obj)
{
    BEGIN_WRAP
    obj->clear();
    END_WRAP
}


// BOWKMeansTrainer

CVAPI(ExceptionStatus) xfeatures2d_BOWKMeansTrainer_new(
    int clusterCount, MyCvTermCriteria termcrit, int attempts, int flags, cv::xfeatures2d::BOWKMeansTrainer **returnValue)
{
    BEGIN_WRAP
    *returnValue = new cv::xfeatures2d::BOWKMeansTrainer(clusterCount, cpp(termcrit), attempts, flags);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWKMeansTrainer_delete(cv::xfeatures2d::BOWKMeansTrainer *obj)
{
    BEGIN_WRAP
    delete obj;
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWKMeansTrainer_cluster1(cv::xfeatures2d::BOWKMeansTrainer *obj, cv::Mat **returnValue)
{
    BEGIN_WRAP
    const cv::Mat m = obj->cluster();
    *returnValue = new cv::Mat(m);
    END_WRAP
}
CVAPI(ExceptionStatus) xfeatures2d_BOWKMeansTrainer_cluster2(cv::xfeatures2d::BOWKMeansTrainer *obj, cv::Mat *descriptors, cv::Mat **returnValue)
{
    BEGIN_WRAP
    const cv::Mat m = obj->cluster(*descriptors);
    *returnValue = new cv::Mat(m);
    END_WRAP
}

// BOWImgDescriptorExtractor

static void DescriptorExtractorDeleter(cv::DescriptorExtractor *) { }
static void DescriptorMatcherDeleter(cv::DescriptorMatcher *) { }

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_new1_Ptr(
    cv::Ptr<cv::DescriptorExtractor> *dextractor, cv::Ptr<cv::DescriptorMatcher> *dmatcher, cv::xfeatures2d::BOWImgDescriptorExtractor **returnValue)
{
    BEGIN_WRAP
    *returnValue = new cv::xfeatures2d::BOWImgDescriptorExtractor(*dextractor, *dmatcher);
    END_WRAP
}
CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_new2_Ptr(
    cv::Ptr<cv::DescriptorMatcher> *dmatcher, cv::xfeatures2d::BOWImgDescriptorExtractor **returnValue)
{
    BEGIN_WRAP
    *returnValue = new cv::xfeatures2d::BOWImgDescriptorExtractor(*dmatcher);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_new1_RawPtr(
    cv::DescriptorExtractor *dextractor, cv::DescriptorMatcher *dmatcher, cv::xfeatures2d::BOWImgDescriptorExtractor **returnValue)
{
    BEGIN_WRAP
    // do not delete dextractor and dmatcher
    const cv::Ptr<cv::DescriptorExtractor> dextractorPtr(dextractor, DescriptorExtractorDeleter);
    const cv::Ptr<cv::DescriptorMatcher> dmatcherPtr(dmatcher, DescriptorMatcherDeleter);
    *returnValue = new cv::xfeatures2d::BOWImgDescriptorExtractor(dextractorPtr, dmatcherPtr);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_new2_RawPtr(
    cv::DescriptorMatcher *dmatcher, cv::xfeatures2d::BOWImgDescriptorExtractor **returnValue)
{
    BEGIN_WRAP
    // do not delete dmatcher
    const cv::Ptr<cv::DescriptorMatcher> dmatcherPtr(dmatcher, DescriptorMatcherDeleter);
    *returnValue = new cv::xfeatures2d::BOWImgDescriptorExtractor(dmatcherPtr);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_delete(cv::xfeatures2d::BOWImgDescriptorExtractor *obj)
{
    BEGIN_WRAP
    delete obj;
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_setVocabulary(cv::xfeatures2d::BOWImgDescriptorExtractor *obj, cv::Mat *vocabulary)
{
    BEGIN_WRAP
    obj->setVocabulary(*vocabulary);
    END_WRAP
}
CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_getVocabulary(cv::xfeatures2d::BOWImgDescriptorExtractor *obj, cv::Mat **returnValue)
{
    BEGIN_WRAP
    cv::Mat m = obj->getVocabulary();
    *returnValue = new cv::Mat(m);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_compute11(
    cv::xfeatures2d::BOWImgDescriptorExtractor *obj, cv::_InputArray *image, std::vector<cv::KeyPoint> *keypoints, cv::_OutputArray *imgDescriptor, 
    std::vector<std::vector<int> >* pointIdxsOfClusters, cv::Mat* descriptors)
{
    BEGIN_WRAP
    obj->compute(*image, *keypoints, *imgDescriptor, pointIdxsOfClusters, descriptors);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_compute12(
    cv::xfeatures2d::BOWImgDescriptorExtractor *obj, cv::_InputArray *keypointDescriptors, 
    cv::_OutputArray *imgDescriptor,     std::vector<std::vector<int> >* pointIdxsOfClusters)
{
    BEGIN_WRAP
    obj->compute(*keypointDescriptors, *imgDescriptor, pointIdxsOfClusters);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_compute2(
    cv::xfeatures2d::BOWImgDescriptorExtractor *obj, cv::Mat *image, std::vector<cv::KeyPoint> *keypoints, cv::Mat *imgDescriptor)
{
    BEGIN_WRAP
    obj->compute2(*image, *keypoints, *imgDescriptor);
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_descriptorSize(cv::xfeatures2d::BOWImgDescriptorExtractor *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->descriptorSize();
    END_WRAP
}

CVAPI(ExceptionStatus) xfeatures2d_BOWImgDescriptorExtractor_descriptorType(cv::xfeatures2d::BOWImgDescriptorExtractor *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->descriptorType();
    END_WRAP
}

#endif // NO_CONTRIB

#endif // NO_CONTRIB